--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
+    "unit": "jest --watchAll --group=unit",
+    "integration": "jest --watchAll --group=integration",
+    "e2e": "jest --watchAll --group=e2e",
     "start": "node server.js"
+  },
+  "jest": {
+    "runner": "groups"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +20,15 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.14.0",
     "express": "^4.17.1",
-    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "ramda": "^0.27.1",
-    "supertest": "^6.0.1"
+    "ramda": "^0.27.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "supertest": "^6.0.1",
+    "jest": "^26.6.3",
+    "jest-runner-groups": "^2.0.1"
   }
 }
