--- a/package.json
+++ b/package.json
@@ -26,9 +26,19 @@
     "ramda": "^0.27.1"
   },
   "devDependencies": {
-    "eslint": "^7.14.0",
-    "supertest": "^6.0.1",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.17",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.2",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
     "jest": "^26.6.3",
-    "jest-runner-groups": "^2.0.1"
+    "jest-runner-groups": "^2.0.1",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2"
   }
 }
