--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^26.0.17",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.2",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
