--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "e2e": "jest --watchAll --group=e2e",
     "start": "node server.js"
   },
-  "jest": {
-    "runner": "groups"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -22,22 +19,24 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.7",
     "ramda": "^0.27.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.7",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.17",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.6.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.15.0",
     "jest": "^26.6.3",
     "jest-runner-groups": "^2.0.1",
+    "jest-watch-typeahead": "^0.6.1",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
