--- a/package.json
+++ b/package.json
@@ -8,35 +8,27 @@
     "unit": "jest --watchAll --group=unit",
     "integration": "jest --watchAll --group=integration",
     "e2e": "jest --watchAll --group=e2e",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "ramda": "^0.27.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.17",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
     "jest": "^26.6.3",
     "jest-runner-groups": "^2.0.1",
-    "jest-watch-typeahead": "^0.6.1",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2"
+    "supertest": "^6.0.1"
   }
 }
