--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "eslint": "^7.15.0",
+    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
+    "prettier": "^1.18.2",
     "jest-runner-groups": "^2.0.1",
     "supertest": "^6.0.1"
   }
