--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js",
     "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
   },
+  "module": "node",
   "author": "",
   "license": "ISC",
   "dependencies": {
