--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
     "ramda": "^0.27.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
     "eslint": "^7.16.0",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "jest-runner-groups": "^2.0.1",
+    "jest-watch-typeahead": "^0.6.1",
     "prettier": "^1.18.2",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.5.4"
   }
 }
