--- a/package.json
+++ b/package.json
@@ -29,8 +29,15 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/node": "^14.14.37",
+    "@types/supertest": "^2.0.11",
     "eslint": "^7.16.0",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
