--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.171",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
+    "express-validator": "^6.12.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.7",
-    "ramda": "^0.27.1"
+    "rambda": "^6.8.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
@@ -33,17 +34,12 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
-    "@types/express-fileupload": "^1.1.6",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
-    "eslint": "^7.16.0",
-    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
-    "jest-runner-groups": "^2.0.1",
     "jest-watch-typeahead": "^0.6.1",
-    "prettier": "^1.18.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.5.4"
   }
