--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.11.7",
-    "rambda": "^6.8.3"
+    "rambda": "^6.8.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
