--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
-    "unit": "jest --watchAll --group=unit",
-    "integration": "jest --watchAll --group=integration",
-    "e2e": "jest --watchAll --group=e2e",
+    "test": "jest --runInBand --watch",
+    "e2e": "jest --watchAll",
     "start": "node server.js",
     "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
   },
@@ -16,17 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.171",
-    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
     "mongoose": "^5.11.7",
-    "rambda": "^6.8.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -41,6 +35,7 @@
     "@types/supertest": "^2.0.11",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
+    "mongodb-memory-server": "^7.3.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.5.4"
   }
