--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --runInBand --watch",
-    "e2e": "jest --watchAll",
-    "start": "node server.js",
-    "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
+    "e2e": "jest --watch --config ./jest-e2e.json",
+    "start": "node server.js"
   },
   "module": "node",
   "author": "",
