--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
+    "multer": "^1.4.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
     "jest": "^26.6.3",
