--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "multer": "^1.4.2",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
     "mongodb-memory-server": "^7.3.2",
