--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
+    "morgan": "^1.10.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
@@ -35,6 +36,7 @@
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.171",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
