--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "integration": "jest --runInBand --config ./jest-integration.json",
     "integration:watch": "jest --watch --runInBand --config ./jest-integration.json",
     "testrun": "npm run test && npm run integration",
-    "start": "tsc -w & nodemon -w dist server.ts",
     "build": "tsc && cp -r pictures dist/",
-    "run": "node dist/server.js"
+    "start": "node dist/server.js"
   },
   "module": "node",
   "author": "",
