--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "stripe": "^8.176.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
-    "@types/nodemailer": "^6.4.4",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -41,6 +41,7 @@
     "@types/lodash": "^4.14.171",
     "@types/morgan": "^1.9.3",
     "@types/node": "^14.14.37",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "jest": "^26.6.3",
