--- a/jest.config.json
+++ b/jest.config.json
@@ -8,6 +8,6 @@
   "testEnvironment": "node",
   "testRegex": "\\.test.ts$",
   "transform": {
-    "^.+\\.(t|j)s$": "ts-jest"
+    "^.+\\.(t|j)s$": ["@swc/jest"]
   }
 }
