--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config ./jest-unit.json",
-    "test:watch": "jest --watch --config ./jest-unit.json",
-    "integration": "jest --runInBand --config ./jest-integration.json",
-    "integration:watch": "jest --watch --runInBand --config ./jest-integration.json",
-    "testrun": "npm run test && npm run integration",
+    "test": "jest --watch",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -32,6 +28,9 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
+    "@swc/cli": "^0.1.51",
+    "@swc/core": "^1.2.105",
+    "@swc/jest": "^0.2.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -47,7 +46,6 @@
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
     "mongodb-memory-server": "^7.3.2",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.5.4"
+    "supertest": "^6.0.1"
   }
 }
