--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
-    "jest": "^26.6.3",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
     "jest-watch-typeahead": "^0.6.1",
     "mongodb-memory-server": "^7.3.2",
     "supertest": "^6.0.1"
