--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "remeda": "^0.0.30",
     "stripe": "^8.176.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
