--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.7",
+    "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
     "remeda": "^0.0.30",
-    "stripe": "^8.176.0",
+    "stripe": "^8.190.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
@@ -36,6 +37,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.9",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.171",
