--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "skipLibCheck": true,
     "removeComments": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
