--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,14 @@
     "target": "es2017",
     "outDir": "./dist",
     "incremental": true,
-    "strict": true
-  }
+    "strict": true,
+    "moduleResolution": "node",
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "rootDir": ".",
+    "useUnknownInCatchVariables": false
+  },
+  "exclude": ["node_modules", "dist"]
 }
