--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
+    "mustache": "^4.2.0",
+    "node-telegram-bot-api": "^0.54.0",
     "nodemailer": "^6.6.3",
     "remeda": "^0.0.30",
     "stripe": "^8.190.0",
@@ -42,7 +44,9 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.171",
     "@types/morgan": "^1.9.3",
+    "@types/mustache": "^4.1.2",
     "@types/node": "^14.14.37",
+    "@types/node-telegram-bot-api": "^0.53.2",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
