--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "rootDir": ".",
     "useUnknownInCatchVariables": false
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "include": ["src"]
 }
