--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
@@ -39,8 +38,8 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
-    "@types/faker": "^5.5.9",
     "@types/jest": "^26.0.22",
+    "@types/json2md": "^1.5.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.171",
     "@types/morgan": "^1.9.3",
@@ -53,6 +52,7 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-watch-typeahead": "^0.6.1",
+    "json2md": "^1.12.0",
     "mongodb-memory-server": "^7.3.2",
     "supertest": "^6.0.1"
   }
